--- a/TaskCheck/Base.lproj/Main.storyboard
+++ b/TaskCheck/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -21,7 +21,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jsG-FQ-SJd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1407" y="-18"/>
+            <point key="canvasLocation" x="2333.5877862595421" y="-18.30985915492958"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -118,7 +118,7 @@
             </objects>
             <point key="canvasLocation" x="101.5267175572519" y="-17.605633802816904"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Title-->
         <scene sceneID="ZSh-nl-A48">
             <objects>
                 <viewController id="abe-WE-64Y" customClass="TableViewController" customModule="TaskCheck" customModuleProvider="target" sceneMemberID="viewController">
@@ -139,8 +139,29 @@
                         <viewLayoutGuide key="safeArea" id="lyc-13-i8X"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" style="editor" id="FBw-Vy-LgD">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="f4E-C3-2es"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B7l-aq-dVH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1687.7862595419847" y="-17.605633802816904"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ztR-NS-BIZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Li6-5x-3Kn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ivk-WV-6bV">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="abe-WE-64Y" kind="relationship" relationship="rootViewController" id="6tQ-9p-vPX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Iw-Pv-Nsi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="761.06870229007632" y="-17.605633802816904"/>
         </scene>
