--- a/TaskCheck/Base.lproj/Main.storyboard
+++ b/TaskCheck/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="btA-EA-mtd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
@@ -18,10 +18,11 @@
                         <viewLayoutGuide key="safeArea" id="Wl8-zv-LJg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="80e-uC-Tqz"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jsG-FQ-SJd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2333.5877862595421" y="-18.30985915492958"/>
+            <point key="canvasLocation" x="2488" y="-229"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -135,6 +136,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="6Id-aF-jzl"/>
                     <connections>
                         <outlet property="completeDateTextField" destination="z86-yk-pOA" id="E1Q-9w-xvV"/>
                         <outlet property="daysTextField" destination="WDt-zD-YWO" id="yAc-PL-TIl"/>
@@ -147,12 +149,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="101.5267175572519" y="-17.605633802816904"/>
+            <point key="canvasLocation" x="2489" y="415"/>
         </scene>
         <!--TableViewController-->
         <scene sceneID="ZSh-nl-A48">
             <objects>
-                <viewController title="TableViewController" id="abe-WE-64Y" customClass="TableViewController" customModule="TaskCheck" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="showTableViewController" title="TableViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="abe-WE-64Y" customClass="TableViewController" customModule="TaskCheck" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Nck-qM-h0b">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -181,7 +183,19 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" style="editor" id="FBw-Vy-LgD">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="f4E-C3-2es"/>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="add" id="f4E-C3-2es">
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="rRs-lh-oOj"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="グラフ" id="CNS-eR-ckI">
+                                <connections>
+                                    <action selector="graphButtonAction:" destination="abe-WE-64Y" id="Pda-Zr-brt"/>
+                                    <segue destination="btA-EA-mtd" kind="show" identifier="toGraphController" id="gnt-dw-W3i"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B7l-aq-dVH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -204,7 +218,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Iw-Pv-Nsi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="761.06870229007632" y="-17.605633802816904"/>
+            <point key="canvasLocation" x="1005" y="-18"/>
         </scene>
     </scenes>
     <resources>
