--- a/TaskCheck/Base.lproj/Main.storyboard
+++ b/TaskCheck/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
@@ -159,9 +159,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lNz-pd-U3I">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="lNz-pd-U3I">
+                                <rect key="frame" x="0.0" y="142" width="393" height="710"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="0R7-b2-N9q">
@@ -181,22 +180,26 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lyc-13-i8X"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottomMargin" secondItem="lNz-pd-U3I" secondAttribute="bottom" constant="-34" id="1Ue-1T-JhW"/>
+                            <constraint firstItem="lNz-pd-U3I" firstAttribute="top" secondItem="lyc-13-i8X" secondAttribute="top" constant="39" id="3hQ-4q-BOR"/>
+                            <constraint firstItem="lNz-pd-U3I" firstAttribute="leading" secondItem="lyc-13-i8X" secondAttribute="leading" id="Ijc-ku-yfK"/>
+                            <constraint firstItem="lNz-pd-U3I" firstAttribute="centerX" secondItem="Nck-qM-h0b" secondAttribute="centerX" id="lyg-ez-XBw"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" style="editor" id="FBw-Vy-LgD">
+                    <navigationItem key="navigationItem" title="Title" style="editor" id="eeO-Bd-s1F">
                         <rightBarButtonItems>
-                            <barButtonItem systemItem="add" id="f4E-C3-2es">
+                            <barButtonItem systemItem="add" id="heE-ry-TeO"/>
+                            <barButtonItem title="グラフ" id="72X-dK-hh4">
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="rRs-lh-oOj"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="グラフ" id="CNS-eR-ckI">
-                                <connections>
-                                    <action selector="graphButtonAction:" destination="abe-WE-64Y" id="Pda-Zr-brt"/>
-                                    <segue destination="btA-EA-mtd" kind="show" identifier="toGraphController" id="gnt-dw-W3i"/>
+                                    <action selector="graphButtonAction:" destination="abe-WE-64Y" id="1aT-y5-vGK"/>
                                 </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="lNz-pd-U3I" id="46k-WY-f8M"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B7l-aq-dVH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
